Fixed Save Icon Being Too Large

--- a/src/pages/components/AbbrSidebar.module.sass
+++ b/src/pages/components/AbbrSidebar.module.sass
@@ -23,7 +23,7 @@
     max-width: 100%
     overflow: hidden
 
-    @apply bg-white bg-opacity-0 text-lg font-bold gap-5 min-h-20
+    @apply bg-white bg-opacity-0 text-lg font-bold gap-5 min-h-20 max-h-20
 
     &:hover
         @apply bg-opacity-20
